# crosswalk-ai

./: .dockerignore  .env  .gitignore  .replit  CLITS.txt  Dockerfile  README.md  analyze_crosswalk.py  continue-config.json  crosswalk  crosswalk_ai_mcp_server.py  data_model_content.txt  deploy.py  docker-compose.yml  extract_datamodel_sheet.py  extract_powerpoint.py  main.py  package-lock.json  package.json  pyproject.toml  readme.md  replit.md  sample_data.csv  shutdown.sh  simple_mcp_test.py  start.py  start.sh
.github/workflows/: branches.md  ci-cd.yml
attached_assets/: CLIENT_GDP_Crosswalk_1755826997501.xlsx  Crosswalk_1755872379217.csv  Pasted-Build-an-MVP-Interactive-Crosswalk-ETL-Helper-You-are-building-a-production-grade-MVP-for-an-int-1755824513275_1755824513277.txt
backend/: app.py  crosswalk.db  data_model_from_excel.csv  database.py  de_identify_data.py  enhance_crosswalk_features.py  enhance_with_datamodel.py  load_real_datamodel.py  load_template_data.py  models.py  models_new.py  requirements.txt  seed_data.py  seed_database.py  update_schema.py
backend/database/: crosswalk-ai-backend.txt  crosswalk.duckdb  duckdb_cxn.py  models.py
backend/datascience/: auto_mapper.py  (+1 more)
business_defintions/: CLIENT_GDP_Crosswalk_1755826997501.numbers  client_source_columns_sample.csv  client_source_columns_sample.numbers  database_tables.md  pi20_data_model.csv  pi20_data_model.numbers
data/: crosswalk.db
datascience/: auto_mapper.py  mapping_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+58 files in other folders)
